--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 
 ## Directory-based project format:
 .idea/
+/.idea/
 # if you remove the above rule, at least ignore the following:
 
 # User-specific stuff:
@@ -49,3 +50,5 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 /target/
 database/
+src/main/java/io/jsql/mysql/util/
+src/test/
