--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@
 
 ## Directory-based project format:
 .idea/
-/.idea/
+/.idea/**
 # if you remove the above rule, at least ignore the following:
 
 # User-specific stuff:
