--- a/.gitignore
+++ b/.gitignore
@@ -50,5 +50,6 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 /target/
 database/
+databases/
 src/main/java/io/jsql/mysql/util/
 src/test/
