--- a/pom.xml
+++ b/pom.xml
@@ -237,9 +237,19 @@
 
             <groupId>com.orientechnologies</groupId>
 
-            <artifactId>orientdb-server</artifactId>
+            <artifactId>orientdb-graphdb</artifactId>
 
-            <version>2.2.17</version>
+            <version>2.2.19</version>
+            <scope>runtime</scope>
+
+        </dependency>
+        <dependency>
+
+            <groupId>com.orientechnologies</groupId>
+
+            <artifactId>orientdb-distributed</artifactId>
+
+            <version>2.2.19</version>
 
         </dependency>
         <dependency>
