spring boot packetd can use

--- a/pom.xml
+++ b/pom.xml
@@ -279,7 +279,7 @@
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
                     <configuration>
-                        <mainClass>io.jsql.web.Application</mainClass>
+                        <mainClass>io.jsql.Main</mainClass>
                         <layout>ZIP</layout>
                     </configuration>
                 </plugin>
