--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     compile group: 'com.esotericsoftware.kryo', name: 'kryo', version:'2.10'
     compile group: 'commons-lang', name: 'commons-lang', version:'2.6'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
     compile group: 'javax.cache', name: 'cache-api', version:'1.0.0'
     compile group: 'org.ehcache', name: 'ehcache', version:'3.3.1'
@@ -71,6 +72,7 @@ dependencies {
 exclude(module: 'commons-logging')
     }
     testCompile group: 'org.jetbrains.kotlin', name: 'kotlin-test', version:'1.1.2-3'
+//    compile "org.jetbrains.kotlin:kotlin-reflect"
 }
 bootJar  {
     mainClass = 'io.jsql.SpringMain'
