--- a/build.gradle
+++ b/build.gradle
@@ -72,7 +72,7 @@ dependencies {
 exclude(module: 'commons-logging')
     }
     testCompile group: 'org.jetbrains.kotlin', name: 'kotlin-test', version:'1.1.2-3'
-//    compile "org.jetbrains.kotlin:kotlin-reflect"
+    compile "org.jetbrains.kotlin:kotlin-reflect"
 }
 bootJar  {
     mainClass = 'io.jsql.SpringMain'
