--- a/config/config.properties
+++ b/config/config.properties
@@ -1,7 +1,7 @@
 #
 # Java-based distributed database like Mysql
 #
-
+jsql.distributed=false
 server.port=9999
 connection.number.max=10000
 db.dir=databases
