--- a/config/config.properties
+++ b/config/config.properties
@@ -1,6 +1,7 @@
 #
 # Java-based distributed database like Mysql
 #
+jsql.audit=false
 jsql.distributed=false
 server.port=9999
 connection.number.max=10000
